--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="info.jackrex.v2ex"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="10"
+    android:versionName="1.1" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="13"
         android:targetSdkVersion="18" />
 
-    <uses-sdk android:minSdkVersion="4"></uses-sdk>
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
@@ -22,7 +21,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppBaseTheme" >
         <activity
             android:name="info.jackrex.v2ex.WelcomeActivity"
             android:label="@string/app_name"
@@ -33,9 +32,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="GuideActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"></activity>
-        <activity android:name="AboutActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"></activity>
-        <activity android:name="MainActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"></activity>
+        <activity android:name="GuideActivity" ></activity>
+        <activity android:name="AboutActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="MainActivity" android:screenOrientation="portrait"></activity>
         
         
         <meta-data android:value="YOUR_APP_KEY" android:name="UMENG_APPKEY"></meta-data>
